syntax= "proto3";

option csharp_namespace = "OrderManagementSystem.Grpc.Provider";

package providerOrder;

import "google/protobuf/empty.proto";

service ProviderService{
	rpc GetProviderById(GetProvidersByIdReques)returns(ProviderReply);
	rpc GetProviders(google.protobuf.Empty)returns(ListProviderReply);
}

message ProviderReply{
	int32 id = 1;
	int32 providerId =2;
}
message GetProvidersByIdReques{
	int32 id =1;
}
message ListProviderReply{
	repeated ProviderReply provider =1;
}